fixed: aligned the text in the 404 message to the center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,7 @@ section.boards-grid-container {
     background-color: #222831;
     color: #eeeeee;
     font-family: 'Quicksand', sans-serif;
+    text-align: center;
 }
 
 
